# DLOlympus

./: .gitignore  README.md  install_mmdetection.ipynb  pyproject.toml  setup.py  template.ipynb
.github/workflows/: ci.yml
DLOlympus/inference/: inference_base.py  inference_fastai.py  regression_heatmaps.py
DLOlympus/training/: blocks.py  callbacks.py  custom_model.py  heatmaps.py  metrics.py  mlflow.py  mmdetection.py  multitask.py  plots.py  unbalanced.py  utils.py
inference/: inference_fastai.py  inference_mmdetection.py
pipeline_nbs/: 1_eda.ipynb  2_dataset.ipynb  3a_training_fastai.ipynb  3b_training_mmdetection.ipynb  4a_inference_fastai.ipynb  evaluation_config.py  project_config.py  training_config.py
src/DLOlympus/fastai/: blocks.py  exports.py  heatmaps.py  imbalanced.py  inference.py  losses.py  metrics.py  models.py  transforms.py
src/DLOlympus/mmdetection/: evaluation.py  hooks.py  inference.py  plots.py  utils.py  visualization.py
src/DLOlympus/onnx/: inference.py
src/DLOlympus/utils/: inference_base.py  plots.py
templates/: inference_fastai.ipynb  training_fastai.ipynb  training_mmdetection.ipynb
tests/: conftest.py  test_fastai_inference.py  test_fastai_losses.py  test_fastai_metrics.py  test_fastai_models.py  test_utils.py
training/: exports.py  mlflow.py  plots.py  singlelabelclassification.py  tables.py  transforms.py  unbalanced.py  utils.py
